add "fbdisks" script to generate a device menu
operates on udisks (events) and lsblk
also eject (for optical drives)

--- a/util/Makemodule.am
+++ b/util/Makemodule.am
@@ -1,6 +1,7 @@
 # util/Makefile.am for Fluxbox
 
 bin_SCRIPTS = \
+    util/fbdisks \
 	util/fbsetbg \
 	util/fluxbox-generate_menu \
 	util/startfluxbox
